Brought in the project the specific version of "autocomplete" we rely on.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1978 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ xlrd
 # Unsure which version satisfied minimum reqs
 PIL
 
-django-autocomplete
+# django-autocomplete - now provided literally
 django-haystack
 django-piston==0.2.2
 django-tinymce
