Made explicit the fact that pysolr needs BeautifulSoup.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1981 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,12 @@ PIL
 django-haystack
 django-piston==0.2.2
 django-tinymce
-pysolr
 python-memcached
 setuptools
+
+# The way we use pysolr introduces an extra dependency:
+pysolr
+BeautifulSoup
 
 # coverage
 # selenium
