While leaving our development settings.py logic alone, added new settings and dependencies for Heroku to give us memcached, New Relic, and gunicorn.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1987 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,10 @@ setuptools
 pysolr
 BeautifulSoup
 
+# For memcached on Heroku we need a caching back-end that does authentication:
+pylibmc==1.2.2
+django-pylibmc-sasl==0.2.4
+
 # coverage
 # selenium
 
@@ -27,3 +31,7 @@ BeautifulSoup
 # -e src/facebook-python-sdk-322930c
 # -e .
 # --extra-index-url=http://dist.pinaxproject.com/dev/ -e ../myplants
+
+# For deployment to Heroku.
+gunicorn
+newrelic
