Started our big image-hosting transition: updated our settings to use S3 and taught the importer to pull directory listings from S3 to learn what image paths exist and thus should be imported into table rows in the database.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@2001 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,10 @@ django-pylibmc-sasl==0.2.4
 # -e .
 # --extra-index-url=http://dist.pinaxproject.com/dev/ -e ../myplants
 
+# For storing images on S3.
+django-storages==1.1.4
+boto==2.2.2
+
 # For deployment to Heroku.
 gunicorn
 newrelic
