--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 *.sw*
 *.DS_Store
 
+# Ignore any modules that a Node test runner puts in a local directory.
+node_modules
+
 # /
 /gobotany.egg-info
 
