Ignore the node_modules directory used by Node.js/Mocha.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /gobotany/static/dijit
 /gobotany/static/dojo
 /gobotany/static/dojox
+/gobotany/static/node_modules
 /gobotany/static/util
 
 # /gobotany/static/js/
