Add package files and profiles for "gobotany" and "simplekey".

--- a/gobotany/static/gobotany/package.json
+++ b/gobotany/static/gobotany/package.json
@@ -8,5 +8,6 @@
         "dojox": "current",
     },
     "description": "The New England Wild Flower Society's Go Botany site application.",
-    "homepage": "https://gobotany.newenglandwild.org"
+    "homepage": "https://gobotany.newenglandwild.org",
+    "dojoBuild": "gobotany.profile.js"
 }
