--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ django-pylibmc-sasl==0.2.4
 # --extra-index-url=http://dist.pinaxproject.com/dev/ -e ../myplants
 
 # For login and registration
-django-facebook-connect==1.0.1
+git+https://github.com/noamsu/django-facebook-connect#egg=django-facebook-connect
 django-registration==0.8
 
 # For storing images on S3.
