Skeleton of s3 image scanner to verify permissions
At this point it grabs a few images and directories to test the HTTP
response codes that it gets back. But, distressingly, "requests" shows
no attempt to do connection pooling, which I will now investigate.

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ django-recaptcha==0.0.4
 # For storing images on S3.
 django-storages==1.1.4
 boto==2.2.2
+requests
 
 # For database migrations
 South==0.7.6
