Moved requirements into setup.py for tox #238
I will ask the other team members about whether we should use tox.
Either way, making our dependencies part of setup.py is more standard
than Kenneth's instructions on Heroku that we put them in a pip-only
requirements.txt file.

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 *.sw*
 *.DS_Store
 
-# Egg info directory from install.sh
+# Tox
+/.tox/
+/build/
 /gobotany.egg-info/
+MANIFEST
 
 # SASS
 /gobotany/static/sass/.sass-cache/
