Added a few more necessary files to MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 include tox.ini
 recursive-include gobotany *.html
+recursive-include gobotany *.txt
 recursive-include gobotany/static *.*
+recursive-include gobotany/api/testdata *.*
 recursive-include gobotany/core image_categories.csv
 recursive-include gobotany/core/testdata *.*
