--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include tox.ini
+include dev/check-dependencies
 recursive-include gobotany *.html
 recursive-include gobotany *.txt
 recursive-include gobotany/static *.*
