--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ chromedriver.log
 # Data files
 110330_fone_test_05.xml
 gobotany-csv-exports-*.zip
-/dev/csv/
+/dev/csv*
 
 # Media directory created during API tests
 /gobotany/media/
